--- a/Cargo.toml
+++ b/Cargo.toml
@@ -12,4 +12,7 @@ quick-xml = "0.10.0"
 failure = "0.1.1"
 log = { version = "0.4.1", features = ["max_level_debug", "release_max_level_warn"] }
 env_logger = "0.5.5"
-nntp = { version = "0.0.7", git = 'https://github.com/tdbgamer/rust-nntp' }
+#nntp = { version = "0.0.11", git = 'https://github.com/tdbgamer/rust-nntp' }
+nntp = { path = '../rust-nntp' }
+yenc = "0.0.4"
+rayon = "1.0.0"
